test/corpus/code_blocks.txt
================================================================================
Simple code block
================================================================================

{[let x = 1]}

--------------------------------------------------------------------------------

(document
  (code_block
    content: (code_content)))

================================================================================
Multiline code block
================================================================================

{[
let rec fib n =
  if n <= 1 then 1
  else fib (n - 1) + fib (n - 2)
]}

--------------------------------------------------------------------------------

(document
  (code_block
    content: (code_content)))

================================================================================
Empty code block
================================================================================

{[]}

--------------------------------------------------------------------------------

(document
  (code_block))
