test/corpus/escape_sequences.txt
================================================================================
Escape left brace
================================================================================

\{

--------------------------------------------------------------------------------

(document
  (paragraph
    (escape_sequence)))

================================================================================
Escape right brace
================================================================================

\}

--------------------------------------------------------------------------------

(document
  (paragraph
    (escape_sequence)))

================================================================================
Escape left bracket
================================================================================

\[

--------------------------------------------------------------------------------

(document
  (paragraph
    (escape_sequence)))

================================================================================
Escape right bracket
================================================================================

\]

--------------------------------------------------------------------------------

(document
  (paragraph
    (escape_sequence)))

================================================================================
Escape at sign
================================================================================

\@

--------------------------------------------------------------------------------

(document
  (paragraph
    (escape_sequence)))

================================================================================
Escape in text
================================================================================

hello \{ world

--------------------------------------------------------------------------------

(document
  (paragraph
    (word)
    (escape_sequence)
    (word)))
