test/corpus/headings.txt
================================================================================
Heading level 0
================================================================================

{0 My library}

--------------------------------------------------------------------------------

(document
  (heading
    level: (heading_level)
    content: (heading_content
      (word)
      (word))))

================================================================================
Heading level 1
================================================================================

{1 Overview}

--------------------------------------------------------------------------------

(document
  (heading
    level: (heading_level)
    content: (heading_content
      (word))))

================================================================================
Heading with inline markup
================================================================================

{2 The {b important} API}

--------------------------------------------------------------------------------

(document
  (heading
    level: (heading_level)
    content: (heading_content
      (word)
      (bold
        content: (word))
      (word))))
