test/corpus/inline_code.txt
================================================================================
Inline code
================================================================================

You can call [fib 10] here.

--------------------------------------------------------------------------------

(document
  (paragraph
    (word)
    (word)
    (word)
    (inline_code
      (inline_code_content))
    (word)))

================================================================================
Inline code in bold
================================================================================

{b bold with [code] inside}

--------------------------------------------------------------------------------

(document
  (paragraph
    (bold
      content: (word)
      content: (word)
      content: (inline_code
        (inline_code_content))
      content: (word))))
