test/corpus/inline_markup.txt
================================================================================
Bold text
================================================================================

{b hello}

--------------------------------------------------------------------------------

(document
  (paragraph
    (bold
      content: (word))))

================================================================================
Italic text
================================================================================

{i hello}

--------------------------------------------------------------------------------

(document
  (paragraph
    (italic
      content: (word))))

================================================================================
Emphasis text
================================================================================

{e hello}

--------------------------------------------------------------------------------

(document
  (paragraph
    (emph
      content: (word))))

================================================================================
Nested markup
================================================================================

{b Bold {i italic {e emphasis [code]} } text}

--------------------------------------------------------------------------------

(document
  (paragraph
    (bold
      content: (word)
      content: (italic
        content: (word)
        content: (emph
          content: (word)
          content: (inline_code
            (inline_code_content))))
      content: (word))))
