test/corpus/links.txt
================================================================================
Link with display text
================================================================================

{{: https://example.com} some text}

--------------------------------------------------------------------------------

(document
  (paragraph
    (link
      url: (link_url)
      text: (word)
      text: (word))))

================================================================================
Link inside a paragraph
================================================================================

See {{: https://ocaml.org} the OCaml site} for details.

--------------------------------------------------------------------------------

(document
  (paragraph
    (word)
    (link
      url: (link_url)
      text: (word)
      text: (word)
      text: (word))
    (word)
    (word)))

================================================================================
Link inside a list item
================================================================================

{ul {- visit {{: https://example.com} here}}}

--------------------------------------------------------------------------------

(document
  (paragraph
    (tagged_ul
      (list_item
        (list_dash)
        (word)
        (link
          url: (link_url)
          text: (word))))))

================================================================================
Multiline link
================================================================================

{{: https://dev.realworldocaml.org/error-handling.html}
Real World OCaml} suggests:

--------------------------------------------------------------------------------

(document
  (paragraph
    (link
      url: (link_url)
      text: (word)
      text: (word)
      text: (word))
    (word)))
