test/corpus/malformed.txt
================================================================================
Malformed: unclosed bold (error recovery)
================================================================================

{b missing end

--------------------------------------------------------------------------------

(document
  (paragraph
    (bold
      content: (word)
      content: (word)
      (MISSING "}"))))
