test/corpus/math.txt
================================================================================
Inline math
================================================================================

Inline math {m a^2 + b^2 = c^2}.

--------------------------------------------------------------------------------

(document
  (paragraph
    (word)
    (word)
    (math_inline
      content: (math_content))
    (word)))

================================================================================
Block math with nested braces
================================================================================

{math
\int_0^\infty e^{-x} dx = 1
}

--------------------------------------------------------------------------------

(document
  (math_block
    content: (math_content)))
