test/corpus/references.txt
================================================================================
Simple reference
================================================================================

See {!Map} here.

--------------------------------------------------------------------------------

(document
  (paragraph
    (word)
    (ref
      id: (ref_id))
    (word)))

================================================================================
Reference with display text
================================================================================

See {{!List.map} map} for details.

--------------------------------------------------------------------------------

(document
  (paragraph
    (word)
    (ref_with_text
      id: (ref_id)
      text: (word))
    (word)
    (word)))
