test/corpus/superscript_subscript.txt
================================================================================
Superscript text
================================================================================

{^ hello}

--------------------------------------------------------------------------------

(document
  (paragraph
    (superscript
      content: (word))))

================================================================================
Subscript text
================================================================================

{_ hello}

--------------------------------------------------------------------------------

(document
  (paragraph
    (subscript
      content: (word))))

================================================================================
Superscript with multiple words
================================================================================

{^ hello world}

--------------------------------------------------------------------------------

(document
  (paragraph
    (superscript
      content: (word)
      content: (word))))

================================================================================
Nested superscript and subscript
================================================================================

{^ text {_ sub}}

--------------------------------------------------------------------------------

(document
  (paragraph
    (superscript
      content: (word)
      content: (subscript
        content: (word)))))
