test/corpus/tagged_code_blocks.txt
================================================================================
Tagged code block with language
================================================================================

{@python[
def f():
  return 0
]}

--------------------------------------------------------------------------------

(document
  (tagged_code_block
    language: (code_language)
    content: (code_content)))

================================================================================
Tagged code block single line
================================================================================

{@ocaml[let x = 1]}

--------------------------------------------------------------------------------

(document
  (tagged_code_block
    language: (code_language)
    content: (code_content)))

================================================================================
Tagged code block empty
================================================================================

{@rust[]}

--------------------------------------------------------------------------------

(document
  (tagged_code_block
    language: (code_language)))
