test/corpus/tagged_lists.txt
================================================================================
Tagged unordered list
================================================================================

{ul {- item one} {- item two}}

--------------------------------------------------------------------------------

(document
  (paragraph
    (tagged_ul
      (list_item
        (word)
        (word))
      (list_item
        (word)
        (word)))))

================================================================================
Tagged ordered list
================================================================================

{ol {- first} {- second}}

--------------------------------------------------------------------------------

(document
  (paragraph
    (tagged_ol
      (list_item
        (word))
      (list_item
        (word)))))

================================================================================
Tagged list with inline markup
================================================================================

{ul {- {b bold} item} {- item with [code]}}

--------------------------------------------------------------------------------

(document
  (paragraph
    (tagged_ul
      (list_item
        (bold
          content: (word))
        (word))
      (list_item
        (word)
        (word)
        (inline_code
          (inline_code_content))))))

================================================================================
Nested tagged lists
================================================================================

{ul {- outer {ul {- inner}}}}

--------------------------------------------------------------------------------

(document
  (paragraph
    (tagged_ul
      (list_item
        (word)
        (tagged_ul
          (list_item
            (word)))))))
