test/corpus/verbatim.txt
================================================================================
Verbatim block
================================================================================

{v
This is verbatim text.
No {b markup} here.
v}

--------------------------------------------------------------------------------

(document
  (verbatim_block
    content: (verbatim_content)))
